@@ -1,3 +1,15 @@
+2000-08-25  Eric Melski  <ericm@ajubasolutions.com>
+
+	* tests/trace.test: Extended array tracing tests.
+
+	* doc/trace.n: Clarified information about when array traces will
+	be fired.
+
+	* generic/tclVar.c (Tcl_ArrayObjCmd): Corrected call to CallTraces
+	(for TCL_TRACE_ARRAY) to only be called when the variable is
+	either an array or is undefined, to ensure that array traces do
+	not fire for scalar variables.
+
 2000-08-24  Eric Melski  <ericm@ajubasolutions.com>
 	
 	* doc/man.macros: Tweaked tab settings for .SO (Standard Options) 
